# charmingbeauty

./: pyproject.toml
charmingbeauty/: __init__.py
src/charmingbeauty/: visual.py
